Update to support JDK-17, Scala-2.12 & Spark-3x